<resources>
    <string name="app_name">Ray mvp</string>
    <string name="loading">加载中…</string>

    <string name="tab_index_text">首页</string>
    <string name="tab_contact_text">通讯录</string>
    <string name="tab_web_view_text">H5应用</string>
    <string name="tab_more_text">更多</string>

    <string name="service_label">Ray自动安装</string>
    <string name="service_desc">自动填充安装密码，并点击确定和继续安装按钮，完成安装后打开APP</string>

    <string name="login">登录</string>
    <string name="user_name">请输入用户名</string>
    <string name="pass_word">请输入密码</string>
    <string name="repeat_password">请重新输入密码</string>
    <string name="btn_login">登录</string>
    <string name="forgot_your_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="btn_register">注册</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>

    <string name="tip_login_success">登录成功</string>

    <string name="popup_menu_scan">扫一扫</string>
    <string name="popup_menu_scan_zbar">扫一扫(ZBar)</string>
    <string name="qr_code_from_gallery">从图片中选取</string>
    <string name="type_code_bar">条形码</string>
    <string name="type_code_qr">二维码</string>

    <string name="web_view_href_hint">网址/关键字</string>
</resources>
