<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.register.RegisterActivity">

    <FrameLayout
        android:layout_centerInParent="true"
        android:paddingTop="70dp"
        android:layout_width="320dp"
        android:layout_height="400dp"
        tools:ignore="UselessParent">
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_add"
            app:cardBackgroundColor="#2ea67f"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
           >
           <LinearLayout
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <TextView
                   android:layout_marginTop="50dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="50dp"
                   android:text="@string/register"
                   android:textColor="#fff"
                   android:textSize="@dimen/title_custom"
                   android:textStyle="bold"
                   />
               <LinearLayout
                   android:layout_marginTop="10dp"
                   android:paddingStart="50dp"
                   android:paddingEnd="30dp"
                   android:layout_width="match_parent"
                   android:layout_height="40dp">
                   <com.google.android.material.textfield.TextInputLayout
                       android:textColorHint="#f0f7f4"
                       android:layout_width="match_parent"
                       android:theme="@style/TextLabel"
                       android:layout_height="wrap_content">

                       <EditText
                           android:id="@+id/et_username"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:background="@drawable/selector_bg_edit_2"
                           android:hint="@string/user_name"
                           android:importantForAutofill="no"
                           android:inputType="textPersonName"
                           android:minWidth="100dp"
                           android:minHeight="50dp"
                           android:paddingBottom="2dp"
                           android:textColor="#f0f7f4"
                           android:textCursorDrawable="@drawable/bg_input_cursor_2"
                           android:textSize="@dimen/input_custom"
                           tools:ignore="TouchTargetSizeCheck" />
                   </com.google.android.material.textfield.TextInputLayout>
               </LinearLayout>
               <LinearLayout
                   android:paddingStart="50dp"
                   android:paddingEnd="30dp"
                   android:orientation="horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="40dp">
                   <com.google.android.material.textfield.TextInputLayout

                       android:textColorHint="#f0f7f4"
                       android:theme="@style/TextLabel"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                       <EditText
                           android:id="@+id/et_password"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:autofillHints="no"
                           android:background="@drawable/selector_bg_edit_2"
                           android:hint="@string/pass_word"
                           android:inputType="textPassword"
                           android:minWidth="100dp"
                           android:minHeight="50dp"
                           android:paddingBottom="2dp"
                           android:textColor="#f0f7f4"
                           android:textCursorDrawable="@drawable/bg_input_cursor_2"
                           android:textSize="@dimen/input_custom"
                           tools:ignore="TouchTargetSizeCheck" />
                   </com.google.android.material.textfield.TextInputLayout>
               </LinearLayout>
               <LinearLayout
                   android:paddingStart="50dp"
                   android:paddingEnd="30dp"
                   android:orientation="horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="40dp">
                   <com.google.android.material.textfield.TextInputLayout

                       android:textColorHint="#f0f7f4"
                       android:theme="@style/TextLabel"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                       <EditText
                           android:id="@+id/et_repeat_password"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:background="@drawable/selector_bg_edit_2"
                           android:hint="@string/repeat_password"
                           android:importantForAutofill="no"
                           android:inputType="textPassword"
                           android:minWidth="100dp"
                           android:minHeight="50dp"
                           android:paddingBottom="2dp"
                           android:textColor="#f0f7f4"
                           android:textCursorDrawable="@drawable/bg_input_cursor_2"
                           android:textSize="@dimen/input_custom"
                           tools:ignore="TouchTargetSizeCheck" />
                   </com.google.android.material.textfield.TextInputLayout>
               </LinearLayout>
               <Button
                   android:layout_marginTop="20dp"
                   android:layout_gravity="center_horizontal"
                   android:id="@+id/bt_go"
                   style="@style/BtnCustomStyle"
                   android:background="@drawable/bt_shape_2"
                   android:stateListAnimator="@drawable/state_list_animator_z"
                   android:layout_width="150dp"
                   android:layout_height="50dp"
                   android:text="@string/btn_register"
                   android:textColor="#2fa881"
                   android:textSize="@dimen/btn_custom"
                   >
               </Button>

           </LinearLayout>
            </androidx.cardview.widget.CardView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:backgroundTint="#2ea67f"
            app:backgroundTint="#2ea67f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="normal"
            android:contentDescription="@string/register"
            android:src="@drawable/plus_x"
            android:transitionName="loginFab"
            android:layout_gravity="center_horizontal|top" />
    </FrameLayout>


</RelativeLayout>
